@@ -4,6 +4,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     properties, preferring candidate.foo and installed.foo.  In a number of
     cases we have to check whether candidate/installed is non-None first.
   * Use apt_pkg.version_compare rather than apt_pkg.VersionCompare.
+  * Use apt_pkg.uri_to_filename rather than apt_pkg.URItoFileName.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 10:52:39 +0100
 
